@@ -78,8 +78,8 @@
   </div>
 </div>
 <div>
-  <h1 id="frame-header"><input type="checkbox" id="frame-switch"><label for="frame-switch">Frame</label></h1>
-  <div id="frame-body">
+  <h1 id="frame-id-header"><input type="checkbox" id="frame-id-switch"><label for="frame-id-switch">Frame</label></h1>
+  <div id="frame-id-body">
     <div class="help">You can specify the frame where the expression is executed. If you want to specify a frame, please do as follows.
       <ol>
         <li>Click the Get-all-frameId button.</li>
